--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -5,4 +5,6 @@
     <string name="password">كلمة المرور</string>
     <string name="forget_password">نسيت كلمه السر ؟</string>
     <string name="home">الصفحة الرئيسية</string>
+    <string name="reports">Reports</string>
+    <string name="logout">Logout</string>
 </resources>
