--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="password">Password</string>
     <string name="forget_password">Forget Password ?</string>
     <string name="home">Home</string>
+    <string name="reports">Reports</string>
+    <string name="logout">Logout</string>
 </resources>
