Room design (done) minor fixes and improvements in the navigation system

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -7,4 +7,5 @@
     <string name="home">الصفحة الرئيسية</string>
     <string name="reports">Reports</string>
     <string name="logout">Logout</string>
+    <string name="rooms">Rooms</string>
 </resources>
