--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="home">Home</string>
     <string name="reports">Reports</string>
     <string name="logout">Logout</string>
+    <string name="rooms">Rooms</string>
 </resources>
