design (without validation, date ant time pickers or reports adapter and list items). data and connection classes.

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -8,4 +8,5 @@
     <string name="reports">Reports</string>
     <string name="logout">Logout</string>
     <string name="rooms">Rooms</string>
+    <string name="no_internet_connection">Check Your Internet Connection</string>
 </resources>
