--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="reports">Reports</string>
     <string name="logout">Logout</string>
     <string name="rooms">Rooms</string>
+    <string name="no_internet_connection">Check Your Internet Connection</string>
 </resources>
