--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -31,6 +31,7 @@
     <string name="total">المجموع:</string>
     <string name="bill_date">تاريخ الفاتورة</string>
     <string name="all">الكل</string>
-    <string name="no_data_to_display">NO DATA TO DISPLAY.</string>
-    <string name="select_shift">Select Shift</string>
+    <string name="no_data_to_display">لا توجد بيانات لعرضها.</string>
+    <string name="select_shift">إختر شيفت</string>
+    <string name="log">السجل</string>
 </resources>
