--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,8 @@
     <string name="all">All</string>
     <string name="no_data_to_display">NO DATA TO DISPLAY.</string>
     <string name="select_shift">Select Shift</string>
+    <string name="log">Log</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
