--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,5 @@
     <string name="select_shift">Select Shift</string>
     <string name="log">Log</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="last_actions">Last Actions</string>
 </resources>
