--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="log">Log</string>
 
     <string name="last_actions">Last Actions</string>
+    <string name="reset_ip">Reset IP Address</string>
 </resources>
