--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="no_internet_connection">Check Your Internet Connection</string>
     <string name="cafe_orders">Cafe Orders</string>
     <string name="start_date">Start Date</string>
-    <string name="single_or_multi">Single or Multi ?</string>
+    <string name="single_or_multi">Single_Multi</string>
     <string name="username_required">Username Required.</string>
     <string name="password_required">Password Required.</string>
     <string name="date_from_required">Date From Is Required.</string>
@@ -62,4 +62,6 @@
     <string name="type">Type</string>
     <string name="value">Value</string>
     <string name="notes">Notes</string>
+    <string name="create_pdf_file">Create PDF File</string>
+    <string name="details">Details</string>
 </resources>
